--- a/css/components.css
+++ b/css/components.css
@@ -15,6 +15,43 @@ html {
   --brown: #8f8b75;
 }
 
+.wrapper {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: 300px minmax(0, 1fr);
+  padding: 0;
+  margin: 0;
+  grid-template-areas:
+    "sidebar content";
+}
+
+.sidebar {
+  grid-area: sidebar;
+  background-color: #f5f5f5;
+  padding: 100px 0 0 30px;
+  margin: 0 20px 0 0;
+
+}
+
+.sidebar-list {
+  text-align: left;
+  position: fixed;
+  padding: 0;
+  line-height: 2rem;
+  list-style: none;
+}
+
+.sidebar-link {
+  text-decoration: none;
+}
+
+.content {
+  grid-area: content;
+  flex: 1 0 auto;
+  padding: 0;
+  margin: 0;
+}
+
 /**
 typography
 **/
