--- a/components/index.html
+++ b/components/index.html
@@ -12,14 +12,16 @@
 </head>
 <body>
   <div class="wrapper">
-  <article class="sidebar">
-    <ul class="sidebar-list">
+  <div class="sidebar">
+    <ul class="sidebar-nav-list">
       <li><a class="sidebar-link" href="#typography">TYPOGRAPHY DEFAULTS</a></li>
-      <li><a class="sidebar-link" href="#body copy">body</a></li>
-      <li><a class="sidebar-link" href="#headings">h1, h2, h3, h4, h5</a></li>
+      <li><a class="sidebar-link" href="#body-copy">body</a></li>
       <li><a class="sidebar-link" href="#a">a</a></li>
+      <li><a class="sidebar-link" href="#headings">h1, h2, h3, h4, h5</a></li>
+      <li><a class="sidebar-link" href="#gallery-section">GALLERY SECTION</a></li>
+      <li><a class="sidebar-link" href="#gallery-block">gallery block</a></li>
     </ul>
-  </article>
+  </div>
 
   <div class="content">
   <h1>AGAC Components</h1>
@@ -27,7 +29,7 @@
   <h3 id="typography">TYPOGRAPHY DEFAULTS</h3>
     
   <article class="component">
-    <h3 class="component__name" id="body copy">Body</h3>
+    <h3 class="component__name" id="body-copy">Body</h3>
     <div class="component__image">
       <img 
       srcset="screenshots/molecules/project-intro-block.png 2x"
@@ -40,7 +42,7 @@
       <p>Created in 2007, Papier is the most important art fair in Quebec. The Montreal event is a driving force in the Canadian contemporary art market and is a space that creates opportunities for exchanges and encounters between the general public, art enthusiasts as well as professionals from the visual arts community.</p>
       <p>AGAC flagship project for now thirteen editions, Papier brings together forty or so of the most prestigious Canadian art galleries each year, both members and non-members of the Association, allowing the public to discover nearly 400 artists.</p>
       <p>Over the years, the fair has been awarded prestigious distinctions, including the Grafika award for its graphic identity, an award for its architectural design and has been named four years in a row by BizBash Magazine in the Top 100 Events in Canada.</p>
-      <p><a href="!#" id="a">Visit Papier&#39s website</a></p>
+      <p><a href="!#" id="a">Visit Papier&#39;s website</a></p>
       </div>
     </div>
   </article>
@@ -78,8 +80,27 @@
     </div>
   </article>
 
+  <h3 id="gallery-section">GALLERY SECTION</h3>
 
-  </div>
-  </div>
+  <article class="component">
+    <h3 class="component__name" id="gallery-block">Gallery Block</h3>
+    <div class="component__image">
+      <img 
+      src="screenshots/molecules/gallery-block.jpg" 
+      alt="gallery-block">
+    </div>
+    <div class="component__code">
+    <article class="gallery-block">
+      <h4>Christie Contemporary</h4>
+      <h5>Toronto</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="sculpture and painting in a gallery">
+    </article>
+    </div>
+  </article>
+
+  </div> <!--content-->
+  </div> <!--page wrapper-->
 </body>
 </html>
