--- a/css/components.css
+++ b/css/components.css
@@ -33,7 +33,7 @@ html {
 
 }
 
-.sidebar-list {
+.sidebar-nav-list {
   text-align: left;
   position: fixed;
   padding: 0;
@@ -50,6 +50,19 @@ html {
   flex: 1 0 auto;
   padding: 0;
   margin: 0;
+}
+
+.component__image {
+  width: 80%;
+  border: .5px solid var(--light-grey);
+  background-color: #f5f5f5;
+  padding: 10px;
+}
+
+.component__code {
+  width: 80%;
+  border: .5px solid var(--light-grey);
+  padding: 10px;
 }
 
 /**
@@ -80,6 +93,7 @@ h4 {
   font-size: 20px;
   line-height: 21px;
   font-weight: 450;
+  margin-top: 8px;
 }
 
 h5 {
@@ -88,6 +102,7 @@ h5 {
   font-weight: 450;
   color: var(--medium-grey);
   margin-top: -25px;
+  padding: 0;
 }
 
 body {
@@ -111,6 +126,18 @@ img {
   display: block;
 }
 
-.half-page-column {
-  width: 500px;
+
+
+/**
+gallery block
+**/
+
+.gallery-block {
+  margin: 20px 0 0 0;
+  width: fit-content;
+  border-top: 1.25px solid black;
+}
+
+.gallery-block__image {
+  margin: -6px 0 0 0;
 }
