--- a/components/index.html
+++ b/components/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="wrapper">
-  <div class="sidebar">
+  <section class="sidebar">
     <ul class="sidebar-nav-list">
       <li><a class="sidebar-link" href="#typography">TYPOGRAPHY DEFAULTS</a></li>
       <li><a class="sidebar-link" href="#body-copy">body</a></li>
@@ -21,7 +21,7 @@
       <li><a class="sidebar-link" href="#gallery-section">GALLERY SECTION</a></li>
       <li><a class="sidebar-link" href="#gallery-block">gallery block</a></li>
     </ul>
-  </div>
+  </section>
 
   <div class="content">
   <h1>AGAC Components</h1>
