--- a/css/components.css
+++ b/css/components.css
@@ -15,6 +15,10 @@ html {
   --brown: #8f8b75;
 }
 
+img {
+  display: block;
+}
+
 .wrapper {
   display: grid;
   grid-gap: 20px;
@@ -121,11 +125,9 @@ hr {
   margin-bottom: -7px;
 }
 
-img {
-  display: block;
+.nav-text {
+  font-size: 16px;
 }
-
-
 
 /**
 gallery block
