--- a/components/index.html
+++ b/components/index.html
@@ -11,6 +11,9 @@
   <title>AGAC Components</title>
 </head>
 <body>
+
+  <!--sidebar-->
+
   <div class="wrapper">
   <section class="sidebar">
     <ul class="sidebar-nav-list">
@@ -18,16 +21,20 @@
       <li><a class="sidebar-link" href="#body-copy">body</a></li>
       <li><a class="sidebar-link" href="#a">a</a></li>
       <li><a class="sidebar-link" href="#headings">h1, h2, h3, h4, h5</a></li>
+      <li><a class="sidebar-link" href="#text">other text styles</a></li>
+      <br>
       <li><a class="sidebar-link" href="#gallery-section">GALLERY SECTION</a></li>
       <li><a class="sidebar-link" href="#gallery-block">gallery block</a></li>
     </ul>
   </section>
 
+   <!--content-->
+
   <div class="content">
   <h1>AGAC Components</h1>
 
   <h3 id="typography">TYPOGRAPHY DEFAULTS</h3>
-    
+
   <article class="component">
     <h3 class="component__name" id="body-copy">Body</h3>
     <div class="component__image">
@@ -39,6 +46,7 @@
     <div class="component__code">
       <div class="half-page-column">
       <hr>  
+      <p>body:</p>
       <p>Created in 2007, Papier is the most important art fair in Quebec. The Montreal event is a driving force in the Canadian contemporary art market and is a space that creates opportunities for exchanges and encounters between the general public, art enthusiasts as well as professionals from the visual arts community.</p>
       <p>AGAC flagship project for now thirteen editions, Papier brings together forty or so of the most prestigious Canadian art galleries each year, both members and non-members of the Association, allowing the public to discover nearly 400 artists.</p>
       <p>Over the years, the fair has been awarded prestigious distinctions, including the Grafika award for its graphic identity, an award for its architectural design and has been named four years in a row by BizBash Magazine in the Top 100 Events in Canada.</p>
@@ -72,11 +80,27 @@
       alt="h5">
     </div>
     <div class="component__code">
+      <p>h1, h2:</p>
       <h1>Papier Contemporary Art Fair</h1>
       <h2>15th edition / August 26 - 28, 2022</h2>
+      <p>h3:</p>
       <h3>History of the fair</h3>
+      <p>h4, h5:</p>
       <h4>Galerie 3</h4>
       <h5>Quebec</h5>
+    </div>
+  </article>
+
+  <article class="component">
+    <h3 class="component__name" id="text">Other Text Styles</h3>
+    <div class="component__image">
+      <img 
+      srcset="screenshots/atoms/nav-text.png 2x"
+      src="screenshots/atoms/nav-text.png" 
+      alt="h1">
+    </div>
+    <div class="component__code">
+      <p class="nav-text">nav-text: Galleries</p>
     </div>
   </article>
 
