--- a/components/index.html
+++ b/components/index.html
@@ -95,12 +95,19 @@
     <h3 class="component__name" id="text">Other Text Styles</h3>
     <div class="component__image">
       <img 
+      srcset="screenshots/atoms/gallery-text.png 2x"
+      src="screenshots/atoms/gallery-text.png" 
+      alt="gallery text">
+      <img 
       srcset="screenshots/atoms/nav-text.png 2x"
       src="screenshots/atoms/nav-text.png" 
-      alt="h1">
+      alt="navigation text">
     </div>
     <div class="component__code">
-      <p class="nav-text">nav-text: Galleries</p>
+      <p>gallery-text:</p>
+      <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
+      <p>nav-text:</p>
+      <p class="nav-text">Galleries</p>
     </div>
   </article>
 
