add text styles

--- a/components/index.html
+++ b/components/index.html
@@ -100,14 +100,32 @@
       alt="gallery text">
       <img 
       srcset="screenshots/atoms/nav-text.png 2x"
-      src="screenshots/atoms/nav-text.png" 
+      src="screenshots/atoms/nav-text.png"
       alt="navigation text">
+      <img 
+      srcset="screenshots/atoms/carousel__caption.png 2x"
+      src="screenshots/atoms/carousel__caption.png" 
+      alt="carousel caption">  
+      <img 
+      srcset="screenshots/atoms/hero__prev-next-text.png 2x"
+      src="screenshots/atoms/hero__prev-next-text.png" 
+      alt="previous-next text">
+      <img 
+      srcset="screenshots/atoms/footer-text__black.png 2x"
+      src="screenshots/atoms/footer-text__black"
+      alt="footer text: black">      
     </div>
     <div class="component__code">
       <p>gallery-text:</p>
       <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
       <p>nav-text:</p>
       <p class="nav-text">Galleries</p>
+      <p>carousel-text:</p>
+      <p class="carousel__caption-text">Papier 2017 and Papier 2018 posters.</p>
+      <p>previous/next text:</p>
+      <p class="hero__prev-next-text">Previous project | Next project</p>
+      <p>footer-text__black</p>
+      <p class="footer-text__black">Subscribe to our newsletter</p>
     </div>
   </article>
 
