add text styles

--- a/components/index.html
+++ b/components/index.html
@@ -113,7 +113,15 @@
       <img 
       srcset="screenshots/atoms/footer-text__black.png 2x"
       src="screenshots/atoms/footer-text__black"
-      alt="footer text: black">      
+      alt="footer text: black">  
+      <img 
+      srcset="screenshots/atoms/footer-text__medium-grey.png 2x"
+      src="screenshots/atoms/footer-text__medium-grey.png"
+      alt="footer text: medium gray">
+      <img 
+      srcset="screenshots/atoms/footer-text__copyright-credit.png 2x"
+      src="screenshots/atoms/footer-text__copyright-credit.png"
+      alt="footer text: copyright-credit">
     </div>
     <div class="component__code">
       <p>gallery-text:</p>
@@ -126,6 +134,10 @@
       <p class="hero__prev-next-text">Previous project | Next project</p>
       <p>footer-text__black</p>
       <p class="footer-text__black">Subscribe to our newsletter</p>
+      <p>footer-text__medium-gray</p>
+      <p class="footer-text__medium-gray">Beaux-arts des Am&eacute;riques</p>
+      <p>footer-text__copyright-credit</p>
+      <p class="footer-text__copyright-credit">&copy;AGAC</p>
     </div>
   </article>
 
