--- a/components/index.html
+++ b/components/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <!--sidebar-->
+<!--sidebar-->
 
   <div class="wrapper">
   <section class="sidebar">
@@ -28,10 +28,12 @@
     </ul>
   </section>
 
-   <!--content-->
+  <!--content-->
 
   <div class="content">
   <h1>AGAC Components</h1>
+
+  <!--typoography-->
 
   <h3 id="typography">TYPOGRAPHY DEFAULTS</h3>
 
@@ -141,6 +143,11 @@
     </div>
   </article>
 
+<!--header-->
+
+
+<!--gallery-->
+
   <h3 id="gallery-section">GALLERY SECTION</h3>
 
   <article class="component">
@@ -160,6 +167,8 @@
     </article>
     </div>
   </article>
+
+  <!--footer-->
 
   </div> <!--content-->
   </div> <!--page wrapper-->
