--- a/css/components.css
+++ b/css/components.css
@@ -160,6 +160,10 @@ hr {
 }
 
 /**
+header
+**/
+
+/**
 gallery block
 **/
 
@@ -172,3 +176,7 @@ gallery block
 .gallery-block__image {
   margin: -6px 0 0 0;
 }
+
+/**
+footer
+**/
