add gallery block

--- a/components/index.html
+++ b/components/index.html
@@ -166,6 +166,19 @@
       alt="sculpture and painting in a gallery">
     </article>
     </div>
+    <h3 class="component__name" id="gallery-block__letter">Gallery Block Letter</h3>
+    <div class="component__image">
+      <img 
+      src="screenshots/atoms/gallery-block__letter.png" 
+      alt="gallery block letter">
+    </div>
+    <div class="component__code">
+    <article class="gallery-block__letter">
+      <img class="gallery-block__letter" 
+      src="../images/gallery-block__letter.png" 
+      alt="the letter A">
+    </article>
+    </div>
   </article>
 
   <!--footer-->
