--- a/css/components.css
+++ b/css/components.css
@@ -12,6 +12,8 @@ html {
   --black: #000;
   --medium-grey: #b2b2b2;
   --light-grey: #d9d9d9;
+  --lighter-grey: #f4f4f4;
+  --lightest-grey: #fafafa;
   --brown: #8f8b75;
 }
 
@@ -59,13 +61,15 @@ img {
   width: 80%;
   border: .5px solid var(--light-grey);
   background-color: #f5f5f5;
-  padding: 10px;
+  padding: 15px;
+  margin: 10px 0;
 }
 
 .component__code {
   width: 80%;
   border: .5px solid var(--light-grey);
-  padding: 10px;
+  padding: 15px;
+  margin: 10px 0;
 }
 
 /**
@@ -120,10 +124,6 @@ a {
   text-underline-offset: 3px;
 }
 
-.nav-text {
-  font-size: 16px;
-}
-
 .gallery-text {
   font-size: 28px;
   line-height: 31px;
@@ -162,6 +162,44 @@ hr {
 /**
 header
 **/
+
+.header-main-nav {
+  max-width: 1284px;
+  height: 53px;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+  border: 3px solid var(--lightest-grey);
+}
+
+.header-main-nav__list {
+  height: 53px;
+  font-size: 16px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+}
+
+a.nav {
+  text-decoration: none;
+}
+
+a.nav:active {
+  padding-bottom: 15px;
+  border-bottom: 4px solid black;
+}
+
+.nav-text {
+  display: flex;
+  font-size: 16px;
+  width:fit-content;
+  padding: 15px;
+  margin: 0;
+  border: 1px solid var(--lighter-grey);
+}
 
 /**
 gallery block
