add page footer

--- a/components/index.html
+++ b/components/index.html
@@ -30,6 +30,10 @@
       <li><a class="sidebar-link" href="#gallery-section">GALLERY SECTION</a></li>
       <li><a class="sidebar-link" href="#gallery-block">gallery block</a></li>
       <li><a class="sidebar-link" href="#gallery-block__letter">gallery block letter</a></li>
+      <br>
+      <li><a class="sidebar-link" href="#page-footer">PAGE FOOTER</a></li>
+      <li><a class="sidebar-link" href="#footer-logo-image">footer logo image</a></li>
+      <li><a class="sidebar-link" href="#footer-logo-name">footer logo name</a></li>
     </ul>
   </section>
 
@@ -150,8 +154,9 @@
 
 <!--page header-->
 
-  <article class="component">
   <h3 id="page-header">PAGE HEADER</h3>
+
+  <article class="component">
   <div class="component__image">
     <img id="header-home-button"
     srcset="screenshots/atoms/header-home-button.png 2x"
@@ -171,27 +176,23 @@
       src="screenshots/molecules/header-main-nav.png"
       alt="header main navigation">
     </div>
-
     <div class="component__code">
     <div id="header-main-nav" class="header-main-nav">
-    <ul class="header-main-nav__list">
-      <li><a href="!#">
-        <img src="../images/header-home-button.png"
-        alt="header home button">
-      </a></li>
-      <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
-      <li class="nav-text"><a class="nav" href="!#">About</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Resources</a></li>
-      <li class="nav-text"><a class="nav" href="!#">AGAC Collection</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Shop</a></li>
-    </ul>
-    <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
-    </div> <!--header-main-nav-->
+      <ul class="header-main-nav__list">
+        <li><a href="!#">
+        <img src="../images/header-home-button.png" alt="header home button"></a></li>
+        <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
+        <li class="nav-text"><a class="nav" href="!#">About</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Resources</a></li>
+        <li class="nav-text"><a class="nav" href="!#">AGAC Collection</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Shop</a></li>
+      </ul>
+      <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
+      </div> <!--header-main-nav-->
     </div> <!--component code-->
-
   </article>
 
 
@@ -215,7 +216,8 @@
       alt="sculpture and painting in a gallery">
       </article>
     </div>
-
+  </article>
+  <article class="component">
     <h3 class="component__name" id="gallery-block__letter">Gallery Block Letter</h3>
     <div class="component__image">
       <img 
@@ -232,6 +234,34 @@
   </article>
 
   <!--footer-->
+
+  <h3 id="page-footer">PAGE FOOTER</h3>
+  <article class="component">
+    <div class="component__image">
+      <img 
+      srcset="screenshots/atoms/footer-brand__logo-image.png 2x"
+      src="screenshots/atoms/footer-brand__logo-image.png" 
+      alt="footer logo image">
+    </div>
+    <div class="component__code">
+      <img 
+      src="../images/footer-brand__logo-image.svg"
+      alt="footer logo image">
+    </div>
+  </article>
+
+  <article class="component">
+    <div class="component__image">
+      <img id="footer-logo-image"
+      srcset="screenshots/atoms/footer-brand__logo-name.png 2x"
+      src="screenshots/atoms/footer-brand__logo-name.png" 
+      alt="footer logo name">
+    </div>
+    <div class="component__code">
+      <p id="footer-logo-name" class="footer-brand__logo-name">Contemporary Art<br>
+        Galleries Association</p>
+    </div>
+  </article>
 
   </div> <!--content-->
   </div> <!--page wrapper-->
