update nav link behavior

--- a/components/index.html
+++ b/components/index.html
@@ -177,10 +177,10 @@
       alt="header main navigation">
     </div>
     <div class="component__code">
+    <!--learn how to change menu for small screen when building page -->
     <div id="header-main-nav" class="header-main-nav">
       <ul class="header-main-nav__list">
-        <li><a href="!#">
-        <img src="../images/header-home-button.png" alt="header home button"></a></li>
+        <li><a href="!#"><img class="logo-square" src="../images/header-home-button.png" alt="header home button"></a></li>
         <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
         <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
         <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
@@ -190,7 +190,9 @@
         <li class="nav-text"><a class="nav" href="!#">AGAC Collection</a></li>
         <li class="nav-text"><a class="nav" href="!#">Shop</a></li>
       </ul>
-      <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
+      <div class="language">
+        <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
+      </div>
       </div> <!--header-main-nav-->
     </div> <!--component code-->
   </article>
