--- a/css/components.css
+++ b/css/components.css
@@ -24,7 +24,7 @@ img {
 .wrapper {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 300px minmax(0, 1fr);
+  grid-template-columns: 320px minmax(0, 1fr);
   padding: 0;
   margin: 0;
   grid-template-areas:
@@ -34,13 +34,16 @@ img {
 .sidebar {
   grid-area: sidebar;
   background-color: #f5f5f5;
-  padding: 100px 0 0 30px;
+  padding: 15px 0 0 30px;
   margin: 0 20px 0 0;
+}
+
+.sidebar-nav {
+  position: fixed;
 }
 
 .sidebar-nav-list {
   text-align: left;
-  position: fixed;
   padding: 0;
   line-height: 2rem;
   list-style: none;
@@ -50,6 +53,9 @@ img {
   text-decoration: none;
 }
 
+.space {
+  color: var(--lighter-grey);
+}
 .content {
   grid-area: content;
   flex: 1 0 auto;
@@ -219,17 +225,37 @@ a.nav:active {
 }*/
 
 /**
-gallery block
+gallery
 **/
+
+.gallery-collection{
+  padding: 0;
+}
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(285px, 1fr));
+  max-width: 1255px;
+  column-gap: 20px;
+  row-gap: 35px;
+  justify-content: center;
+  padding: 75px 22px;
+}
 
 .gallery-block {
   margin: 20px 0 0 0;
   width: fit-content;
   border-top: 1.25px solid black;
+  display: grid;
 }
 
 .gallery-block__image {
-  margin: -6px 0 0 0;
+  margin: -9px 0 0 0;
+  display: grid;
+}
+
+.gallery-text {
+  display: grid;
+  grid-column: 1 / span 2;
 }
 
 /**
